; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_compat_validator.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_compat_validator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.compat_baton = type { i32, i32* (i32, i8*, i8*)* }

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i8*, i8*, i32*)* @compat_validator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @compat_validator(i8* %0, i8* %1, i8* %2, i8* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.compat_baton*, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i8* %3, i8** %10, align 8
  store i32* %4, i32** %11, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = bitcast i8* %13 to %struct.compat_baton*
  store %struct.compat_baton* %14, %struct.compat_baton** %12, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %27

17:                                               ; preds = %5
  %18 = load %struct.compat_baton*, %struct.compat_baton** %12, align 8
  %19 = getelementptr inbounds %struct.compat_baton, %struct.compat_baton* %18, i32 0, i32 1
  %20 = load i32* (i32, i8*, i8*)*, i32* (i32, i8*, i8*)** %19, align 8
  %21 = load %struct.compat_baton*, %struct.compat_baton** %12, align 8
  %22 = getelementptr inbounds %struct.compat_baton, %struct.compat_baton* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = load i8*, i8** %9, align 8
  %26 = call i32* %20(i32 %23, i8* %24, i8* %25)
  store i32* %26, i32** %6, align 8
  br label %29

27:                                               ; preds = %5
  %28 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %28, i32** %6, align 8
  br label %29

29:                                               ; preds = %27, %17
  %30 = load i32*, i32** %6, align 8
  ret i32* %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
